tests/machine/x/ocaml/tree_sum.error
File "/tmp/TestOCamlCompiler_VMValid_Goldentree_sum151136629/001/tree_sum.ml", line 24, characters 8-12:
24 | let t : node = Node (Leaf, 1, Node (Leaf, 2, Leaf))
             ^^^^
Error: Unbound type constructor node
